<resources>
    <string name="app_name">Kidz Learn App</string>
    <string name="logo_kidz_learn">Logo Kidz Learn</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercise">Exercise</string>
    <string name="learning">Learning</string>
    <string name="profile">Profile</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="your_email">Your Email</string>
    <string name="password">Password</string>
    <string name="your_password">Your Password</string>
    <string name="register">Register</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="create_an_account">Create An Account</string>
    <string name="username">Username</string>
    <string name="your_username">Your Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="continu">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Log Out</string>
    <string name="user_email">User Email</string>
    <string name="user_username">User Username</string>
    <string name="learning_title">What Do You Learn\nToday?</string>
    <string name="alphabets">Alphabets</string>
    <string name="animals">Animals</string>
    <string name="numbers">Numbers</string>
    <string name="colors">Colors</string>
    <string name="about_description">KidzLearn is an interactive educational game designed specifically for kids. It aims to provide a fun and engaging way for kids to learn basic concepts like the alphabet, numbers, colors, animals, and other basic subjects through gamification activities. The app combines learning with play, utilizing interactive challenges and quizzes to enhance cognitive development, problem-solving skills, creativity in a safe and user-friendly environment.</string>
    <string name="about_dev">Developers\nMachine Learning Engineers:\n • Gabriel Olivia Yvonne Manurung - M277B4KX1565\n • Nahdah Tsamarah Hasan - M277B4KX3225\n • Siti Rahmah - M446B4KX4180\n\nCloud Computing Engineers:\n • Davin Albar Pratama - C764B4KY1019\n • Ega Sulanjana - C764B4KY1232\n\nMobile Developers:\n • Aridwan - A764B4KY0627\n • Firman Gifari - A764B4KY1526</string>
    <string name="about_ver">App Version:\n1.0</string>
    <string name="send">Send</string>
    <string name="provide_your_suggestions">Provide your suggestions:</string>
    <string name="feedback">Feedback</string>
    <string name="back_button">Back Button</string>
    <string name="about">About</string>
    <string name="yes">Yes</string>
    <string name="alert">Alert!</string>
    <string name="success">Success!</string>
    <string name="confirm_logout">Sure you want to log out?</string>

</resources>