<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_exercise">

    <fragment
        android:id="@+id/nav_exercise"
        android:name="com.c242ps187.kidzlearnapp.view.fragment.ExerciseFragment"
        android:label="@string/exercise"
        tools:layout="@layout/fragment_exercise" />

    <fragment
        android:id="@+id/nav_learning"
        android:name="com.c242ps187.kidzlearnapp.view.fragment.LearningFragment"
        android:label="@string/learning"
        tools:layout="@layout/fragment_learning" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.c242ps187.kidzlearnapp.view.fragment.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

</navigation>