<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.FeedbackActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_feedback_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/provide_your_suggestions"
        android:textSize="16sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_feedback_title"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edt_feedback"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_black_border"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_feedback" />

    <Button
        style="@style/FormButton"
        android:id="@+id/btn_send"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textSize="16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/edt_feedback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>