<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/profile"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_feedback"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_about" />

        <ImageView
            android:id="@+id/iv_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_about"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/iv_profile_pic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:src="@drawable/user_fill" />

        <TextView
            android:id="@+id/tv_label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="32dp"
            android:layout_marginStart="55dp"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_pic"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_email_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="55dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_email"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_label_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="55dp"
            app:layout_constraintTop_toBottomOf="@id/tv_email_user"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_username"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="55dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_user"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            style="@style/FormButton"
            android:id="@+id/btn_logout"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            app:layout_constraintTop_toBottomOf="@id/tv_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="65dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>